--- a/HTML-CSS_09/index.html
+++ b/HTML-CSS_09/index.html
@@ -4,7 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css-" />
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
     <title>HTML-CSS_09</title>
   </head>
-  <body></body>
+  <body>
+    <!-- ----------------------------------------------------------------------- -->
+    <!--                                CONTAINER                                -->
+    <!-- ----------------------------------------------------------------------- -->
+    <div class="container">
+      <div class="header">
+        <div class="search-num">
+          <img src="./img/logo.png" alt="" />
+          <div class="header-left">
+            <select name="" id="">
+              <!-- secilmis olarak gelsin diye "selected" kullandim -->
+              <option value="" selected>All Categories</option>
+              <option value="">Wooden</option>
+              <option value="">Linen</option>
+              <option value="">Bedroom</option>
+              <option value="">Kitchen</option>
+            </select>
+          </div>
+          <div class="search">
+            <input type="text" placeholder="Enter a word " />
+            <img src="./img/magnifier.png" alt="" />
+          </div>
+          <div class="support">
+            <p class="support-number">0 800 456 78 89</p>
+            <p class="support-text">Support 24/7</p>
+          </div>
+        </div>
+        <div class="icons"></div>
+      </div>
+    </div>
+  </body>
 </html>
